added missing features
